# wolflm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
wolflm/: __main__.py  index.py  models.py  utils.py
wolflm/chat/: __init__.py  base.py  tool.py
wolflm/chat/rag/: loaders.py  vectorstore.py
wolflm/chat/rag/splitters/: __init__.py
wolflm/controller/: __init__.py  presentation_helper.py  prompt_builder.py  wolfchat.py
wolflm/gemini/: base.py  utils.py
wolflm/llm/: gemini.py  models.py
wolflm/model/: __init__.py  base.py  chat.py  tool.py  utils.py
wolflm/model/rag/: vectorstore.py
wolflm/model/rag/splitters/: text.py
wolflm/skills/: Assistente_de_Debate.md  meeting_notes.md  presentation_helper.md  prompt_builder.md  pt_translator.md
wolflm/view/: DEV.py  __init__.py  agents.py  chat.py  presentation_helper.py  prompt_builder.py
